[package]
name = "rtb-vcs"
description = "Rust Tool Base — release-provider abstractions and backends (GitHub, GitLab, Bitbucket, Gitea, Codeberg, Direct)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
# Built-in backends are feature-gated so a downstream tool that only
# targets one provider doesn't pay the compile-cost of the others.
# `git` is default-on per v0.5 scope A7 — the framework spec promises
# `Repo`; tools with hard binary-size budgets disable it via
# `default-features = false`.
default = ["github", "gitlab", "gitea", "codeberg", "direct", "bitbucket", "git"]
# Each backend is feature-gated so a downstream tool that only targets
# one provider can trim the compile-cost of the others.
github = ["_http"]
gitlab = ["_http"]
gitea = ["_http"]
# Codeberg piggybacks on the gitea backend but exposes its own
# distinct `source_type: codeberg` registration with the host hard-
# coded to `codeberg.org`.
codeberg = ["gitea"]
direct = ["_http"]
bitbucket = ["_http"]
# v0.5 git-operations slice. Pulls in `gix` for the `Repo` type and
# `rtb-credentials` for auth (Repo::clone / fetch / push call
# `Resolver::resolve` per A2). See
# `docs/development/specs/2026-05-11-v0.5-scope.md`.
git = ["dep:gix", "dep:rtb-credentials"]
# Opt-in fallback for ops gix can't yet do — push, primarily. Pulls
# libgit2 (C dependency); kept opt-in per A4 so cross-compile lanes
# (musl + windows) stay clean for the majority of consumers. Implies
# `git` because the push impl lives inside the `git/` module.
git2-fallback = ["git", "dep:git2"]
# Enables the testcontainers-backed integration-tests gated with
# `#[cfg(feature = "integration")]`. Not default-on: requires Docker.
integration = []
# Internal feature — pulls in the HTTP-client deps any backend needs.
# Not for direct use by downstream tools.
_http = ["dep:reqwest", "dep:serde_json", "dep:bytes", "dep:futures-util", "dep:tokio-util"]

[dependencies]
rtb-app = { path = "../rtb-app", version = "0.3.0" }
rtb-error = { path = "../rtb-error", version = "0.3.0" }

# Async + trait plumbing
tokio = { workspace = true }
async-trait = { workspace = true }

# Error type
miette = { workspace = true }
thiserror = { workspace = true }

# Config types
serde = { workspace = true }

# Value types
semver = { workspace = true }
time = { workspace = true }

# Secrets — providers accept an optional bearer token
secrecy = { workspace = true }

# Registry (linkme-backed distributed slice of provider factories)
linkme = { workspace = true }

# Structured logging at the trait layer
tracing = { workspace = true }

# Backend HTTP — optional, feature-gated per backend.
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
# `io` feature adds `StreamReader`, which adapts `Stream<Item = Result<Bytes>>`
# into `AsyncRead` for streaming asset downloads.
tokio-util = { version = "0.7", features = ["io"], optional = true }

# v0.5 git-operations slice — gated on the `git` feature. gix is the
# primary backend; rtb-credentials handles auth resolution.
gix = { workspace = true, optional = true }
rtb-credentials = { path = "../rtb-credentials", version = "0.3.0", optional = true }
# `git2` is gated on the `git2-fallback` feature (push slice).
git2 = { workspace = true, optional = true }

[dev-dependencies]
cucumber = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
# `multipart` is only used by the testcontainers Gitea integration test
# to upload an asset via the real Gitea API.
reqwest = { workspace = true, features = ["multipart"] }
wiremock = { workspace = true }
testcontainers = { workspace = true }
# v0.5 git-ops tests use `gix-testtools` for fixture-repo creation
# per A5.
gix-testtools = { workspace = true }
tempfile = { workspace = true }
