[package]
name = "rtb"
description = "Rust Tool Base — the batteries-included CLI application framework. Umbrella crate re-exporting the full public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = ["cli", "update", "docs", "mcp", "credentials"]
cli = ["dep:rtb-cli"]
update = ["dep:rtb-update"]
docs = ["dep:rtb-docs"]
mcp = ["dep:rtb-mcp"]
ai = ["dep:rtb-ai"]
credentials = ["dep:rtb-credentials"]
tui = ["dep:rtb-tui"]
telemetry = ["dep:rtb-telemetry"]
vcs = ["dep:rtb-vcs"]
full = ["cli", "update", "docs", "mcp", "ai", "credentials", "tui", "telemetry", "vcs"]

[dependencies]
rtb-core = { path = "../rtb-core", version = "0.1.0" }
rtb-error = { path = "../rtb-error", version = "0.1.0" }
rtb-config = { path = "../rtb-config", version = "0.1.0" }
rtb-assets = { path = "../rtb-assets", version = "0.1.0" }
rtb-cli = { path = "../rtb-cli", version = "0.1.0", optional = true }
rtb-update = { path = "../rtb-update", version = "0.1.0", optional = true }
rtb-docs = { path = "../rtb-docs", version = "0.1.0", optional = true }
rtb-mcp = { path = "../rtb-mcp", version = "0.1.0", optional = true }
rtb-ai = { path = "../rtb-ai", version = "0.1.0", optional = true }
rtb-credentials = { path = "../rtb-credentials", version = "0.1.0", optional = true }
rtb-tui = { path = "../rtb-tui", version = "0.1.0", optional = true }
rtb-telemetry = { path = "../rtb-telemetry", version = "0.1.0", optional = true }
rtb-vcs = { path = "../rtb-vcs", version = "0.1.0", optional = true }
