[package]
name = "rtb-example-minimal"
description = "Minimal smoke-test tool built on rtb — mirrors the gtb-generated project layout."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "minimal"
path = "src/main.rs"

[dependencies]
rtb = { path = "../../crates/rtb", version = "0.1.0", features = ["full"] }
tokio = { workspace = true }
miette = { workspace = true }
