[package]
name = "rtb-example-minimal"
description = "Minimal smoke-test tool built on rtb — mirrors the gtb-generated project layout."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "minimal"
path = "src/main.rs"

[dependencies]
rtb = { path = "../../crates/rtb", version = "0.1.0" }
tokio = { workspace = true }
miette = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
# linkme's `#[distributed_slice]` attribute expands to `::linkme::...`
# paths, so downstream consumers need it as a direct dep even when
# accessing the slice via `rtb::core::linkme::...`.
linkme = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
